
CR = Change Request item
Local-only = Changes not reflected in Source Code
Backend Maintenance = Change is not user facing

## [2016-04-09] [Since 2016-04-02 Integration]
### Changed:
- add option for admins to toggle 'last visit' format
- change user controls specialist dropdown to use their MSP number instead of Pathways ID
- update 'broken links' task

## [2016-04-02] [Since 2016-03-26 Integration]
### Changed:
- Closed clinics no longer show waittimes on specialty pages
- Display waittimes for specialists accepting referrals with limitations
- Remove Vancouver (hidden)
- Upgrade to Rails 4.0

## [2016-03-26] [Since 2016-03-19 Integration]
### Fixed:
- Fix clinic #public & #private

### Changed:
- After you 'View Pathways As' a different role or division, you're redirected to the place
you came from
- Admin users from live site now included in demo site
- All users created on demo site now stay on demo site, even if we reset all the other data
- Upgrade Ruby to 2.2.4
- "Contact Me" links now all show a form to send administrators emails through the app
- All emails on Pathways test servers now sent to developers to facilitate better testing

## [2016-03-19] [Since 2016-03-12 Integration]
### Changed:
- Update wording of 'divisions sharing' news items to 'divisions showing'
- Update labeling of Internal Medicine tag field
- Name referral forms better in page views report
- Add Pathways ID to specialists dropdown in user form, to distinguish between people with the same name

## [2016-03-12] [Since 2016-03-05 Integration]
### Changed:
- Review queue email now says if there were no changes
- History now indicates no changes on unchanged review items
- If a user clicks the 'no changes' button when editing, we only save the pre-edit data
- 'Contact Us' on login page & navbar dropdown now goes to Provincial primary contacts
- Ensure nobody enters duplicate specialist attendances
- #347: Break down bulk import in email by division