@@ -10,6 +10,7 @@ Backend Maintenance = Change is not user facing
 - add option for admins to toggle 'last visit' format
 - change user controls specialist dropdown to use their MSP number instead of Pathways ID
 - update 'broken links' task
+- don't allow deletion of clinic without also changing specialist offices at its locations
 
 ## [2016-04-02] [Since 2016-03-26 Integration]
 ### Changed:
